--- a/IDERA/doc_prefix.html
+++ b/IDERA/doc_prefix.html
@@ -1,9 +1,15 @@
-<div class="container">
-   <div class="m-0 p-0 text-center" >
-        <a class="navbar-brand text-uppercase" href="https://www.indec.gob.ar">
-        <img src="imagenes/logocenso.png" width="30" height="30" class="d-inline-block align-top" alt="">
-                    Segmenta
-        </a>
-        <div style="position: relative; top: -15px; height:0px;">presentación</div>
-    </div>
+<div class="container text-center">
+   <table class="m-0 p-0 text-center" >
+    <tr>
+      <td>
+        <img src=imagenes/cac-logo.png height="30" class="d-inline-block align-top" alt="" />
+        </td><td>
+        <div style="position: relative; top: -15px; height:0px;"> presentación </div>
+        </td><td>
+        <img src="imagenes/logocenso.png" height="30" class="d-inline-block align-top" alt="">
+        </td><td>
+        <a class="navbar-brand text-uppercase" href="https://www.indec.gob.ar">Segmentador INDEC</a>
+      </td>
+    </tr>
+   </table>
 </div>
