--- a/IDERA/doc_prefix.html
+++ b/IDERA/doc_prefix.html
@@ -2,10 +2,10 @@
    <table class="m-0 p-0 text-center" >
     <tr>
       <td>
-        <img src=imagenes/cac-logo.png height="30" class="d-inline-block align-top" alt="" />
-        </td><td>
+        <img src=imagenes/idera-logo.png height="30" class="d-inline-block align-top" alt="" />
+        </td><td width='80%' >
         <div style="position: relative; top: -15px; height:0px;"> presentación </div>
-        </td><td>
+        </td><td width='10%' >
         <img src="imagenes/logocenso.png" height="30" class="d-inline-block align-top" alt="">
         </td><td>
         <a class="navbar-brand text-uppercase" href="https://www.indec.gob.ar">Segmentador INDEC</a>
